--- a/SKATERS/registrazione/style.css
+++ b/SKATERS/registrazione/style.css
@@ -1,7 +1,8 @@
 .grid {
     display: grid;
     grid-template:
-        ' i ' / 1fr;
+        ' i ' 
+        ' s '/ 1fr;
     border: solid 0px;
     text-align: center;
     /* Imposta la terza riga per occupare tutto lo spazio disponibile */
@@ -10,7 +11,6 @@
     
 }
 .grid > div {
-    margin-top: 7%;
     overflow: auto;
     border: 0px;
     padding: 2em 1em; 
@@ -18,9 +18,13 @@
 .c1 {
     width: 90%;
     grid-area: i;   
-    margin-top: 50%;
+    margin-top: 10%;
     margin-left: 3.5%;
     padding: 0;
+    
+}
+.c2{
+    grid-area: s;
 }
 
 .linea {
@@ -43,5 +47,6 @@
     padding: 10px;
     width: 100%;
     height: 75px;
+    margin-bottom: 0%;
     z-index: 9999;
 }
